# falcon-core

./: .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libfalconconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
build-aux/m4/: bitcoin_qt.m4
ci/lint/: 06_script.sh
ci/test/: 00_setup_env_native_multiprocess.sh  04_install.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: gitian-build.py  gitian-build.sh
contrib/devtools/: copyright_header.py  gen-manpages.sh  previous_release.sh  symbol-check.py
contrib/gitian-descriptors/: assign_DISTNAME  gitian-falcon-desktop.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml  make_git_archive
contrib/linearize/: example-linearize.cfg
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/seeds/: generate-seeds.py
doc/: Doxyfile.in  README.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  fork-notes.md  release-notes-falcon.md
doc/man/: Makefile.am
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  amount.h  anon.cpp  anon.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blind.cpp  blockencodings.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.h  coins.cpp  coins.h  core_write.cpp  init.cpp  miner.cpp  net.cpp  net.h  net_processing.cpp  net_processing.h  outputtype.cpp  rctindex.h  rest.cpp  (+4 more)
src/bench/: blind.cpp  ccoins_caching.cpp  falcon_add_tx.cpp  mlsag.cpp  verify_script.cpp
src/consensus/: merkle.cpp  params.h  tx_verify.cpp  validation.h
src/index/: txindex.cpp
src/insight/: balanceindex.h  csindex.h  insight.cpp  insight.h  rpc.cpp
src/interfaces/: chain.h  wallet.h
src/key/: extkey.cpp  extkey.h  keyutil.cpp  keyutil.h  mnemonic.cpp  mnemonic.h  stealth.cpp  stealth.h
src/node/: blockstorage.cpp  coinstats.cpp  interfaces.cpp
src/policy/: policy.cpp  policy.h
src/pos/: kernel.cpp  kernel.h  miner.cpp  miner.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  createwalletdialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  main.cpp  mnemonicdialog.cpp  mnemonicdialog.h  optionsdialog.cpp  paymentserver.cpp  sendcoinsdialog.cpp  splashscreen.cpp  utilitydialog.cpp  walletcontroller.cpp  walletmodel.cpp
src/qt/forms/: modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_am.ts  bitcoin_ar.ts  bitcoin_be.ts  bitcoin_bg.ts  bitcoin_bn.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en.xlf  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_eu.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fil.ts  bitcoin_fr.ts  bitcoin_gl_ES.ts  bitcoin_he.ts  bitcoin_hi.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id.ts  bitcoin_is.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk.ts  (+43 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: test_main.cpp
src/rpc/: anon.cpp  blockchain.cpp  mining.cpp  misc.cpp  mnemonic.cpp  net.cpp  rawtransaction.cpp  rawtransaction_util.cpp  rpcutil.cpp  rpcutil.h  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  falconconsensus.h  interpreter.cpp  interpreter.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/src/modules/mlsag/: main_impl.h  tests_impl.h
src/smsg/: crypter.cpp  db.cpp  db.h  keystore.h  net.h  rpcsmessage.cpp  smessage.cpp  smessage.h
src/test/: bech32_tests.cpp  ct_tests.cpp  extkey_tests.cpp  falconchain_tests.cpp  main.cpp  mnemonic_tests.cpp  ringct_tests.cpp  script_tests.cpp  sighash_tests.cpp  smsg_tests.cpp  stealth_tests.cpp  test_bitcoin_main.cpp  validation_flush_tests.cpp
src/test/fuzz/: script_bitcoin_consensus.cpp
src/test/util/: setup_common.cpp  setup_common.h
src/usbdevice/: debugdevice.cpp  ledgerdevice.cpp  rpcusbdevice.cpp  rpcusbdevice.h  trezordevice.cpp  usbdevice.cpp  usbdevice.h
src/util/: system.cpp  system.h
src/wallet/: coinselection.h  dump.cpp  feebumper.cpp  fees.cpp  hdwallet.cpp  hdwallet.h  hdwalletdb.cpp  hdwalletdb.h  hdwallettypes.h  interfaces.cpp  receive.cpp  rpcdump.cpp  rpchdwallet.cpp  rpchdwallet.h  rpcwallet.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  sqlite.cpp  transaction.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp
src/wallet/test/: frozen_blinded_tests.cpp  hdwallet_test_fixture.cpp  hdwallet_test_fixture.h  hdwallet_tests.cpp  rct_tests.cpp  rpc_hdwallet_tests.cpp  stake_tests.cpp  wallet_tests.cpp
src/zmq/: zmqpublishnotifier.cpp
test/: README.md  get_previous_releases.py
test/functional/: feature_config_args.py  feature_filelock.py  feature_includeconf.py  feature_ins_addressindex.py  feature_ins_balancesindex.py  feature_ins_csindex.py  feature_ins_spentindex.py  feature_ins_timestampindex.py  feature_ins_txindex.py  feature_part_anon.py  feature_part_blind.py  feature_part_coldstaking.py  feature_part_extkey.py  feature_part_pos.py  feature_part_smsg.py  feature_part_smsg_multiwallet.py  feature_part_smsg_rollingcache.py  feature_part_smsgpaid.py  feature_part_smsgpaidfee.py  feature_part_smsgpaidfee_ext.py  feature_part_stealth.py  feature_part_treasury_fund.py  feature_part_usbdevice.py  (+30 more)
(+9 files in other folders)
